--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
               <!-- At Uniclick, we always aim for unique, simplistic, cost-effictive & user-friendly approach to solve a problem.   -->
-              At Uniclick we always love four leaf clover :). It represents our values very well. Those are:
+              At Uniclick we just love four leaf clovers :). It represents our values very well. Those are:
             </p>
 
             <div class="icon-box wow fadeInUp">
@@ -161,7 +161,7 @@
               This mentality makes us highly innovative & proud of what we create, which inevitably makes you <strong>the ultimate winner.</strong> 
             </p>
             <p>
-              Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
+              So, we want to assure you that your are in good hand. We will give it our best. As your succeed, so do we.
             </p>
           </div>
         </div>
