--- a/project/index.html
+++ b/project/index.html
@@ -161,12 +161,12 @@
               This mentality makes us highly innovative & proud of what we create, which inevitably makes you <strong>the ultimate winner.</strong> 
             </p>
             <p>
-              So, we want to assure you that your are in good hand. We will give it our best. As your succeed, so do we.
+              So, we want to assure you that your are in good hands. As you succeed, so do we!! We will give it our best.
             </p>
           </div>
         </div>
 
-        <div class="row about-extra">
+        <div class="row about-extra d-none">
           <div class="col-lg-6 wow fadeInUp order-1 order-lg-2">
             <img src="img/about-extra-2.svg" class="img-fluid" alt="">
           </div>
@@ -197,7 +197,7 @@
 
         <header class="section-header">
           <h3>Services</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <p>We provide the following services.</p>
         </header>
 
         <div class="row">
@@ -205,45 +205,45 @@
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">NEARBY</a></h4>
+              <p class="description">Do you have a physical store and want to bring it online? Your search ende here. Clixk to learn more.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="">Web Development</a></h4>
+              <p class="description">Need a custom website for your business? Or want a personalised portfolio website? We are expert in these.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="">Web Design</a></h4>
+              <p class="description">Need a wordpress site to have the full control on your hand? We also provide that.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Android & Web Application</a></h4>
+              <p class="description">Want a web or android application for your business? Contact us now!</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Digital Marketing</a></h4>
+              <p class="description">Digital marketing might appear simple, but there are lots of psychological aspect in work. Give us a chance, we will show you result.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">Content Writing</a></h4>
+              <p class="description">Need someone to write a blog for you? We are ready to help!</p>
             </div>
           </div>
 
@@ -259,7 +259,7 @@
       <div class="container">
         <header class="section-header">
           <h3>Why choose us?</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          <p>Tll now we have worked with 8 clients & have delivered more than 15 projects.</p>
         </header>
 
         <div class="row row-eq-height justify-content-center">
@@ -268,8 +268,8 @@
             <div class="card wow bounceInUp">
                 <i class="fa fa-diamond"></i>
               <div class="card-body">
-                <h5 class="card-title">Corporis dolorem</h5>
-                <p class="card-text">Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab inventore officiis aut voluptatibus.</p>
+                <h5 class="card-title">Strong Core Values</h5>
+                <p class="card-text">Our values are what defines ourself and makes us superior to our competitors.</p>
                 <a href="#" class="readmore">Read more </a>
               </div>
             </div>
@@ -279,8 +279,8 @@
             <div class="card wow bounceInUp">
                 <i class="fa fa-language"></i>
               <div class="card-body">
-                <h5 class="card-title">Voluptates dolores</h5>
-                <p class="card-text">Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.</p>
+                <h5 class="card-title">Stunning Products!</h5>
+                <p class="card-text">We take design very seriously. You can easily checck it by comparing our portfolios with other companies.</p>
                 <a href="#" class="readmore">Read more </a>
               </div>
             </div>
@@ -290,8 +290,8 @@
             <div class="card wow bounceInUp">
                 <i class="fa fa-object-group"></i>
               <div class="card-body">
-                <h5 class="card-title">Eum ut aspernatur</h5>
-                <p class="card-text">Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex. </p>
+                <h5 class="card-title">Awesome Technical Support</h5>
+                <p class="card-text">Once you becomes our customer we will keep on providing techical support to ensure 100% satisfaction! </p>
                 <a href="#" class="readmore">Read more </a>
               </div>
             </div>
@@ -302,22 +302,22 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">274</span>
+            <span data-toggle="counter-up">8</span>
             <p>Clients</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">421</span>
+            <span data-toggle="counter-up">15</span>
             <p>Projects</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1,364</span>
+            <span data-toggle="counter-up">136</span>
             <p>Hours Of Support</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">18</span>
+            <span data-toggle="counter-up">10</span>
             <p>Hard Workers</p>
           </div>
   
@@ -327,9 +327,9 @@
     </section>
 
     <!--==========================
-      Portfolio Section
+      Portfolio Section (It is currently hidden)
     ============================-->
-    <section id="portfolio" class="clearfix">
+    <section id="portfolio" class="clearfix d-none">
       <div class="container">
 
         <header class="section-header">
@@ -550,7 +550,7 @@
     </section><!-- #testimonials -->
 
     <!--==========================
-      Team Section
+      Team Section (It is currently hidden)
     ============================-->
     <section id="team">
       <div class="container">
@@ -720,19 +720,18 @@
 
           <div class="col-lg-6">
             <div class="map mb-4 mb-lg-0">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.6563426434604!2d88.41630431493785!3d22.88914998502082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f896a31073f335%3A0x9515c598afd2f773!2sNaihati%20Station!5e0!3m2!1sen!2sin!4v1578082430250!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe>
             </div>
           </div>
-
           <div class="col-lg-6">
             <div class="row">
               <div class="col-md-5 info">
                 <i class="ion-ios-location-outline"></i>
-                <p>A108 Adam Street, NY 535022</p>
+                <p>Naihati Station Road, Hooghly, West Bengal</p>
               </div>
               <div class="col-md-4 info">
                 <i class="ion-ios-email-outline"></i>
-                <p>info@example.com</p>
+                <p>info@uniclick.in</p>
               </div>
               <div class="col-md-3 info">
                 <i class="ion-ios-telephone-outline"></i>
@@ -783,7 +782,7 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>NewBiz</h3>
+            <h3>UNICLICK</h3>
             <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
           </div>
 
