--- a/project/index.html
+++ b/project/index.html
@@ -46,7 +46,7 @@
           <li class="active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <!-- <li><a href="#portfolio">Portfolio</a></li> -->
           <li><a href="#team">Team</a></li>
           <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -91,8 +91,8 @@
         </h2>
           <p>This is not just a statement, this is our commitment.</p>
         <div id="intro-buttons">
-          <a href="#about" class="btn-get-started scrollto">Get Started</a>
-          <a href="#services" class="btn-services scrollto">Our Services</a>
+          <a id="get-started-btn" href="#about" class="btn-get-started scrollto">Get Started</a>
+          <a id="our-services-btn" href="#services" class="btn-services scrollto">Our Services</a>
         </div>
       </div>
 
@@ -117,7 +117,7 @@
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
               <!-- At Uniclick, we always aim for unique, simplistic, cost-effictive & user-friendly approach to solve a problem.   -->
-              At Uniclick we just love four leaf clovers :). It represents our values very well. Those are:
+              At Uniclick, we just love four leaf clovers :). It represents our values very well. Those are:
             </p>
 
             <div class="icon-box wow fadeInUp">
@@ -147,7 +147,7 @@
           </div>
 
           <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
-            <img src="img/about-img.svg" class="img-fluid" alt="">
+            <img src="img/about-img.png" class="img-fluid" alt="">
           </div>
         </div>
 
@@ -204,14 +204,14 @@
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-paper-outline ion-padding-left" style="color: #ff689b;"></i></div>
+              <div class="icon"><i class="ion-android-apps ion-padding-left" style="color: #68ff9a;"></i></div>
               <h4 class="title"><a href="https://webstore.nearbymarts.com">NEARBY WEBSTORE</a></h4>
               <p class="description">Do you have a physical store and want to bring it online? Your search ende here. Click to learn more.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-bookmarks-outline ion-padding-left" style="color: #e9bf06;"></i></div>
+              <div class="icon"><i class="ion-social-html5 ion-padding-left" style="color: #e90606;"></i></div>
               <h4 class="title"><a href="">Web Development</a></h4>
               <p class="description">Need a custom website for your business? Or want a personalised portfolio website? We are expert in these.</p>
             </div>
@@ -219,14 +219,14 @@
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-analytics-outline ion-padding-left" style="color: #3fcdc7;"></i></div>
+              <div class="icon"><i class="ion-ios-analytics ion-padding-left" style="color: #f0d90d;"></i></div>
               <h4 class="title"><a href="">Analytics</a></h4>
               <p class="description">Want to monitor user behaviours to drive more sale? We can do that too.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-speedometer-outline ion-padding-left" style="color:#41cf2e;"></i></div>
+              <div class="icon"><i class="ion-social-android ion-padding-left" style="color:#41cf2e;"></i></div>
               <h4 class="title"><a href="">Android & Web Application</a></h4>
               <p class="description">Want a web or android application for your business? Contact us now!</p>
             </div>
@@ -234,16 +234,16 @@
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-world-outline ion-padding-left" style="color: #d6ff22;"></i></div>
+              <div class="icon"><i class="ion-ios-world ion-padding-left" style="color: #22f0ff;"></i></div>
               <h4 class="title"><a href="">Digital Marketing</a></h4>
               <p class="description">Digital marketing might appear simple, but there are lots of psychological aspect in work. Give us a chance, we will show you result.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp " data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-clock-outline ion-padding-left" style="color: #4680ff;"></i></div>
+              <div class="icon"><i class="ion-ios-bookmarks ion-padding-left" style="color: #4680ff;"></i></div>
               <h4 class="title"><a href="">Content Writing</a></h4>
-              <p class="description">Need someone to write a blog for you? We are ready to help!</p>
+              <p class="description">Need someone to write a blog for you? We have professional writers who will be more than happy to help!</p>
             </div>
           </div>
 
@@ -329,7 +329,7 @@
     <!--==========================
       Portfolio Section (It is currently hidden)
     ============================-->
-    <section id="portfolio" class="clearfix d-none">
+    <!-- <section id="portfolio" class="clearfix d-none">
       <div class="container">
 
         <header class="section-header">
@@ -478,7 +478,8 @@
         </div>
 
       </div>
-    </section><!-- #portfolio -->
+    </section> -->
+    <!-- #portfolio -->
 
     <!--==========================
       Clients Section
@@ -550,13 +551,13 @@
     </section><!-- #testimonials -->
 
     <!--==========================
-      Team Section (It is currently hidden)
+      Team Section
     ============================-->
     <section id="team">
       <div class="container">
         <div class="section-header">
           <h3>Team</h3>
-          <p>The FOUR LEAF OF CLOVER of the company</p>
+          <p>The FOUR LEAF CLOVER of the company</p>
         </div>
 
         <div class="row">
@@ -571,7 +572,6 @@
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
@@ -589,7 +589,6 @@
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
@@ -607,7 +606,6 @@
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
@@ -625,7 +623,6 @@
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-google-plus"></i></a>
                     <a href=""><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
@@ -647,7 +644,7 @@
 
         <div class="section-header">
           <h3>Our CLients</h3>
-          <p>Within a year of establishment, we have grown from 0 customers to 10. We have provided services to multiple customers from NAASCOM kolkata.</p>
+          <p>Within a year of establishment, we have grown from 0 customers to 10. We have provided services to multiple customers from NASSCOM kolkata.</p>
           <h4 style="text-align: center;">Our Top Client</h4>
           
         </div>
@@ -737,7 +734,7 @@
               </div>
               <div class="col-md-3 info">
                 <i class="ion-ios-telephone-outline"></i>
-                <p>+1 5589 55488 55</p>
+                <p>+91 7003564091 </p>
               </div>
             </div>
 
@@ -785,7 +782,7 @@
 
           <div class="col-lg-4 col-md-6 footer-info">
             <h3>UNICLICK</h3>
-            <p>A startup from West BEngal, India not aiming to disrupt anything but rather help everyone grow by enabling technology to everyone.</p>
+            <p>A startup from West BEngal, aiming to bring the bliss of technology to everyone.</p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
@@ -813,7 +810,6 @@
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
 
@@ -846,7 +842,7 @@
 
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
   <!-- Uncomment below i you want to use a preloader -->
-  <div id="preloader"></div>
+  <!-- <div id="preloader"></div> -->
 
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
@@ -866,6 +862,7 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
+  <script src="js/manual.js" ></script>
 
 </body>
 </html>
