--- a/project/index.html
+++ b/project/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UNICLICK | unique, simplisticm cost-effective & user-friendly solutions for your digital problems</title>
+  <title>UNICLICK | unique, simplistic cost-effective & user-friendly solutions for your digital problems</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="web developer, App development, NEARBY, Webstore, ecommerce developer. developers" name="keywords">
+  <meta content="We are one of the leading tech solution providers in kolkata. Our services range from web & app web development to our own propitery solution Webstore & Marts." name="description">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -270,7 +270,7 @@
               <div class="card-body">
                 <h5 class="card-title">Strong Core Values</h5>
                 <p class="card-text">Our values are what defines ourself and makes us superior to our competitors.</p>
-                <a href="#" class="readmore">Read more </a>
+                <!-- <a href="#" class="readmore">Read more </a> -->
               </div>
             </div>
           </div>
@@ -281,7 +281,7 @@
               <div class="card-body">
                 <h5 class="card-title">Stunning Products!</h5>
                 <p class="card-text">We take design very seriously. You can easily check it by comparing our portfolio with other companies.</p>
-                <a href="#" class="readmore">Read more </a>
+                <!-- <a href="#" class="readmore">Read more </a> -->
               </div>
             </div>
           </div>
@@ -292,7 +292,7 @@
               <div class="card-body">
                 <h5 class="card-title">Awesome Technical Support</h5>
                 <p class="card-text">Once you become our customer we will keep on providing techical support to ensure 100% satisfaction! </p>
-                <a href="#" class="readmore">Read more </a>
+                <!-- <a href="#" class="readmore">Read more </a> -->
               </div>
             </div>
           </div>
@@ -484,7 +484,7 @@
     <!--==========================
       Clients Section
     ============================-->
-    <section id="testimonials" class="section-bg d-none">
+    <!-- <section id="testimonials" class="section-bg d-none">
       <div class="container">
 
         <header class="section-header">
@@ -548,7 +548,9 @@
 
 
       </div>
-    </section><!-- #testimonials -->
+    </section> -->
+    
+    <!-- #testimonials -->
 
     <!--==========================
       Team Section
@@ -730,7 +732,7 @@
               </div>
               <div class="col-md-4 info">
                 <i class="ion-ios-email-outline"></i>
-                <p>uniclicksolutions@gmail.com.in</p>
+                <p>uniclicksolutions@gmail.com</p>
               </div>
               <div class="col-md-3 info">
                 <i class="ion-ios-telephone-outline"></i>
@@ -741,7 +743,7 @@
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
-              <form action="" method="post" role="form" class="contactForm">
+              <form id="myform"  action="" method="post" role="form" class="contactForm">
                 <div class="form-row">
                   <div class="form-group col-lg-6">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
