--- a/project/index.html
+++ b/project/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UNICLICK | unique, simplistic cost-effective & user-friendly solutions for your digital problems</title>
+  <title>UNICLICK | unique, simplistic cost-effective & user-friendly solutions for you & your business</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="web developer, App development, NEARBY, Webstore, ecommerce developer. developers" name="keywords">
-  <meta content="We are one of the leading tech solution providers in kolkata. Our services range from web & app web development to our own propitery solution Webstore & Marts." name="description">
+  <meta content="We are one of the leading tech solution providers in kolkata. Our services range from web & app web development to our own propitery solution Webstore, Marts & ECoach" name="description">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -37,8 +37,8 @@
 
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 class="text-light"><a href="#header"><span>UNICLICK</span></a></h1>
-        <!-- <a href="#intro" class="scrollto"><img src="img/UNICLOCK LOGO FINAL (1).jpg" alt="" class="img-fluid" style="width: 20px;"></a> -->
+        <!-- <h1 class="text-light"><a href="#header"><span> UNICLICK</span></a></h1> -->
+        <a href="#intro" class="scrollto"><img src="img/Uniclick Logo Icon_PNG.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
@@ -572,9 +572,9 @@
                   <h4>Suman Ghosh</h4>
                   <span>Chief Executive Officer</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href="https://twitter.com/SumanGhosh91"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100009357742023"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/suman-ghosh-5889b6184/"><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -591,7 +591,7 @@
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/suraj-kumar-ram-31401b191"><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -608,7 +608,7 @@
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/souptik-biswas-b00183191/"><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -623,9 +623,9 @@
                   <h4>Suvom Ghosh</h4>
                   <span>Chief Marketing Officer</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.twitter.com/suvomghoshonly"><i class="fa fa-twitter"></i></a>
+                    <a href="https://www.facebook.com/subham.ghosh.16906715"><i class="fa fa-facebook"></i></a>
+                    <a href="http://www.linkedin.com/in/suvom-ghosh-uniclick"><i class="fa fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -646,7 +646,7 @@
 
         <div class="section-header">
           <h3>Our CLients</h3>
-          <p>Within a year of establishment, we have grown from 0 customers to 10. We have provided services to multiple customers from NASSCOM kolkata.</p>
+          <p>Within a year of establishment, we have grown from 0 customers to 10. We have provided services to multiple customers from NASSCOM 10,000 startups, Kolkata</p>
           <h4 style="text-align: center;">Our Top Client</h4>
           
         </div>
@@ -743,26 +743,26 @@
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
-              <form id="myform"  action="" method="post" role="form" class="contactForm">
+              <form id="myform"  action="" method="" role="form" class="contactForm">
                 <div class="form-row">
                   <div class="form-group col-lg-6">
-                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" required/>
                     <div class="validation"></div>
                   </div>
                   <div class="form-group col-lg-6">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" required/>
                     <div class="validation"></div>
                   </div>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" required/>
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                  <textarea class="form-control" name="message" id="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message" required></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit" title="Send Message">Send Message</button></div>
+                <div class="text-center"><button type="submit" title="Send Message"><span id="sendingStatus1" class="spinner-border spinner-border-sm sendingStatus1" style="display: none;"></span><span id="sendingStatus2" style="display: none;"> Sending...</span><span id="sendButton">Send Message</span></button></div>
               </form>
             </div>
           </div>
@@ -810,7 +810,7 @@
 
             <div class="social-links">
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.facebook.com/Uniclick-Solutions-100653034791051/" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -820,8 +820,8 @@
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Subscribe to our news letter to get notified about our offers, new products & services.</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit"  value="Subscribe">
+            <form action="" method="post" id="subscribe">
+              <input id="subscriber" type="email" name="email"><input id="submitButton" type="submit"  value="Subscribe">
             </form>
           </div>
 
@@ -831,7 +831,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Uniclick Technologies Pvt Ltd</strong>. All Rights Reserved
+        &copy; Copyright <strong>Uniclick Solutionss Pvt Ltd</strong>. All Rights Reserved
       </div>
       <div class="credits" style="font-size: 10px;">
          <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade, </a>
@@ -860,9 +860,21 @@
   <script src="lib/isotope/isotope.pkgd.min.js"></script>
   <script src="lib/lightbox/js/lightbox.min.js"></script>
   <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+  <!-- <script src="contactform/contactform.js"></script> -->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<!-- <script src="/__/firebase/7.14.3/firebase-app.js"></script> -->
 
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<!-- Initialize Firebase -->
+<!-- <script src="/__/firebase/init.js"></script> -->
   <!-- Template Main Javascript File -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
+  <script src="/__/firebase/7.14.3/firebase-analytics.js"></script>
+
+  
   <script src="js/main.js"></script>
   <script src="js/manual.js" ></script>
 
