--- a/project/index.html
+++ b/project/index.html
@@ -121,25 +121,25 @@
             </p>
 
             <div class="icon-box wow fadeInUp">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+              <div class="icon"><i class="fa fa-star"></i></div>
               <h4 class="title"><p>Unique</p></h4>
               <p class="description">We ensure that what we deliver is unique. We believe to win in this highly competitive market your product must stand out among the clutter of the online jungle.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
-              <div class="icon"><i class="fa fa-photo"></i></div>
+              <div class="icon"><i class="fa fa-eye"></i></div>
               <h4 class="title"><p>Simplistic</p></h4>
               <p class="description">We follow the simplistic & minimalistic design pattern to ensure it is soothing to the eyes.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <div class="icon"><i class="fa fa-money"></i></div>
               <h4 class="title"><p>Cost-effictive</p></h4>
               <p class="description">Cost-effectiveness is a must whatever solution we deliver. You will get the most of your bucks, we guarentee it!</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <div class="icon"><i class="fa fa-user-circle"></i></div>
               <h4 class="title"><p>User-friendly</p></h4>
               <p class="description">It does not even matter how good your product is if it is hard to use or navigate for your customers. And so we take it as a high priority.</p>
             </div>
@@ -209,41 +209,58 @@
               <p class="description">Do you have a physical store and want to bring it online? Your search ende here. Click to learn more.</p>
             </div>
           </div>
+
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
+            <div class="box">
+              <div class="icon"><i class="ion-ios-monitor ion-padding-left" style="color: #2b0404;"></i></div>
+              <h4 class="title"><a href="https://ecoaching.uniclick.in">ECoaching</a></h4>
+              <p class="description">Want to bring your coaching institute online without breaking the bank? Check it out! Basic packages starting from just Rs 250/month!</p>
+            </div>
+          </div>
+          
+          <div class="col-md-6 col-lg-5 wow bounceInUp offset-lg-1" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-social-html5 ion-padding-left" style="color: #e90606;"></i></div>
               <h4 class="title"><a href="">Web Development</a></h4>
               <p class="description">Need a custom website for your business? Or want a personalised portfolio website? We are expert in these.</p>
             </div>
           </div>
-
-          <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
-            <div class="box">
-              <div class="icon"><i class="ion-ios-analytics ion-padding-left" style="color: #f0d90d;"></i></div>
-              <h4 class="title"><a href="">Analytics</a></h4>
-              <p class="description">Want to monitor user behaviours to drive more sale? We can do that too.</p>
+  
+            <div class="col-md-6 col-lg-5  wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+              <div class="box">
+                <div class="icon"><i class="ion-ios-world ion-padding-left" style="color: #22f0ff;"></i></div>
+                <h4 class="title"><a href="">Digital Marketing</a></h4>
+                <p class="description">Digital marketing might appear simple, but there are lots of psychological aspect in work. Give us a chance, we will show you result.</p>
+              </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+          <div class="col-md-6 col-lg-5 wow bounceInUp offset-lg-1" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-social-android ion-padding-left" style="color:#41cf2e;"></i></div>
               <h4 class="title"><a href="">Android & Web Application</a></h4>
               <p class="description">Want a web or android application for your business? Contact us now!</p>
             </div>
           </div>
-
-          <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+          <div class="col-md-6 col-lg-5  wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-world ion-padding-left" style="color: #22f0ff;"></i></div>
-              <h4 class="title"><a href="">Digital Marketing</a></h4>
-              <p class="description">Digital marketing might appear simple, but there are lots of psychological aspect in work. Give us a chance, we will show you result.</p>
+              <div class="icon"><i class="ion-ios-analytics ion-padding-left" style="color: #f0d90d;"></i></div>
+              <h4 class="title"><a href="">Analytics</a></h4>
+              <p class="description">Want to monitor user behaviours to drive more sale? We can do that too.</p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-5 wow bounceInUp " data-wow-delay="0.2s" data-wow-duration="1.4s">
+
+          
+          <div class="col-md-6 col-lg-5 wow bounceInUp  offset-lg-1" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-bookmarks ion-padding-left" style="color: #4680ff;"></i></div>
               <h4 class="title"><a href="">Content Writing</a></h4>
               <p class="description">Need someone to write a blog for you? We have professional writers who will be more than happy to help!</p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
+            <div class="box">
+              <div class="icon"><i class="ion-paintbucket ion-padding-left" style="color: #f069c5;"></i></div>
+              <h4 class="title"><a href="">Graphics Designing</a></h4>
+              <p class="description">Our talented designers can provide you quality graphics for your banners, social media posts or maybe you want a logo? Contact us!</p>
             </div>
           </div>
 
@@ -559,7 +576,7 @@
       <div class="container">
         <div class="section-header">
           <h3>Team</h3>
-          <p>The FOUR LEAF CLOVER of the company</p>
+          <p>The <b>four leaf clover</b> of the company</p>
         </div>
 
         <div class="row">
@@ -784,7 +801,7 @@
 
           <div class="col-lg-4 col-md-6 footer-info">
             <h3>UNICLICK</h3>
-            <p>A startup from West BEngal, aiming to bring the bliss of technology to everyone.</p>
+            <p>Uniclick, a startup from Kolkata, West Bengal, is here to provide the bliss of technology through it's unique, simplistic, cost-effective & user-friendly solutions to enable businesses as well as people grow beyond what was previously possible.</p>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
@@ -821,7 +838,8 @@
             <h4>Our Newsletter</h4>
             <p>Subscribe to our news letter to get notified about our offers, new products & services.</p>
             <form action="" method="post" id="subscribe">
-              <input id="subscriber" type="email" name="email"><input id="submitButton" type="submit"  value="Subscribe">
+              <div show id="subscribe_err">ERROR! PLEASE TRY AGAIN!</div>
+              <input id="subscriber" type="email" name="email"><input id="submitButton2" type="submit"  value="Subscribe">
             </form>
           </div>
 
@@ -831,7 +849,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>Uniclick Solutionss Pvt Ltd</strong>. All Rights Reserved
+        &copy; Copyright <strong>Uniclick Solutions Pvt Ltd</strong>. All Rights Reserved
       </div>
       <div class="credits" style="font-size: 10px;">
          <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade, </a>
